fixed cart overflow

--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -20,9 +20,10 @@
   flex-direction: column;
 
   .items {
-    overflow: auto;
+    overflow-y: scroll;
     flex: 1;
     margin-bottom: 40px;
+    max-height: 65vh;
   }
 
   h2 {
